# Polis

./: .env.example  .gitignore  .pylintrc  FROZEN_RULES.md  LOGGING_CHECKLIST.py  README.MD  docker.ps1  docker.sh  pyproject.toml  requirements.txt
.github/workflows/: logging-standards.yml
deployment/docker/: .env.docker  .env.docker.example  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  CONTAINER.md  DOCKER_QUICK_REFERENCE.md  FROZEN_LOGGING_RULES.md  IMPLEMENTATION_SUMMARY.md  LOG_FORMAT_REQUIREMENTS.md  QUICKSTART.md
engines/: example_engine.py
infrastructure/: __init__.py  container.py
infrastructure/config/: __init__.py  dependency_injection.py  settings.py
infrastructure/logging/: __init__.py  logger.py
scripts/: pre-commit-check-print.sh  setup-hooks.sh
