[project]
name = "polis"
version = "0.1.0"
description = "Polis - Autonomous Agent Platform"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.6.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.pylint.format]
max-line-length = 100

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
